Fix scroll issue on mobile and update hero layout

--- a/src/app/main/hero/hero.module.css
+++ b/src/app/main/hero/hero.module.css
@@ -3,8 +3,7 @@
   height: 100vh;
   background-color: #000;
   position: relative;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .model {
@@ -162,17 +161,17 @@
     flex-wrap: wrap;
   }
   .bgText h1 {
-    font-size: 2.5rem;
+    font-size: 1.8rem;
     margin-bottom: 10px;
   }
   
   .bgText svg {
-    font-size: 2rem; 
+    font-size: 1.8rem; 
   }
 
   .bgText span {
-    font-size: 3.5rem; 
-    margin: 1.5rem 0 1.5rem 2.5rem; 
+    font-size: 2rem; 
+    margin: 1.5rem 0 1.5rem 5rem; 
   }
   .topText h1 {
     font-size: 1.7rem;
@@ -180,11 +179,19 @@
   .topText h3{
     font-size: 1.2rem;
   }
+  .text{
+    align-items: center;
+    justify-content: center;
+  }
+   .textContainer{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
   .text h3 {
-    font-size: 1.2rem; 
+    font-size: 1rem; 
   }
 
   .text p {
-    font-size: 0.8rem; 
+    font-size: 0.5rem; 
   }
 }
