--- a/src/app/project/project.module.css
+++ b/src/app/project/project.module.css
@@ -52,6 +52,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  transform: translateY(-20%);
+
 }
 
 .text h1 {
@@ -138,6 +140,8 @@
   font-family: sans-serif;
   max-width: 100%;
   word-wrap: break-word;
+  transform: translateY(-50%);
+
 }
 @media (max-width: 1200px) {
   .text h1{
